# taams-aau

./: .gitignore  Cargo.toml  Dockerfile  README.md  devbox.json  pra.html
.idx/: dev.nix
data/: aau_taams.db
src/: main.rs
src/db/: journal_repository.rs  mod.rs  schema.rs  submission_repository.rs
src/errors/: mod.rs
src/models/: journals.rs  mod.rs  response.rs  submission.rs
src/routes/: admin.rs  call_for_papers.rs  journals.rs  landing.rs  mod.rs  submissions.rs
src/services/: storage.rs
src/static/css/: admin.css  style.css
src/utils/: mod.rs
templates/: about.html  editorial.html  journal.html  landing.html  submit.html
templates/admin/: index.html  login.html  upload.html
templates/admin-portal/: art-submitted.html  downloaded.html  index.html  login.html  manuscript.html  published.html  styles.css
templates/admin/layouts/: base.html
templates/call_for_papers/: info.html
templates/editorial/: board.html
templates/journals/: article.html  current.html  details.html  journal.html  past.html
templates/layouts/: base-2.html  base.html
templates/manuscript/: manuscript.html
templates/submissions/: submit.html
